--- a/todo-list-haskell.cabal
+++ b/todo-list-haskell.cabal
@@ -67,7 +67,14 @@ executable todo-list-haskell
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    http-types ^>=0.12.4,
+                      base ^>=4.18.3.0,
+                      scotty ^>=0.12,
+                      aeson ^>=2.1.2.1,
+                      text ^>=2.0.2,
+                      uuid ^>=1.3.15,
+                      time ^>=1.12.2,
+                      containers ^>=0.6.7
 
     -- Directories containing source files.
     hs-source-dirs:   app
